--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
